samples/_failures_safe/1761071352_760e19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05ebfe53.c: In function ‘main’:
./samples/SAFE/__tmp_05ebfe53.c:149:5: error: ‘initialize’ undeclared (first use in this function); did you mean ‘initialize_graph’?
  149 |     initialize
      |     ^~~~~~~~~~
      |     initialize_graph
./samples/SAFE/__tmp_05ebfe53.c:149:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_05ebfe53.c:149:15: error: expected ‘;’ at end of input
  149 |     initialize
      |               ^
      |               ;
./samples/SAFE/__tmp_05ebfe53.c:149:5: error: expected declaration or statement at end of input
  149 |     initialize
      |     ^~~~~~~~~~
